--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,16 @@ services:
     networks:
       - backend-go
 
+  redis:
+    image: 'bitnami/redis:latest'
+    container_name: full_cache
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+    - '6379:6379'
+    networks:
+      - backend-go
+
   postgres:
     image: postgres:latest
     container_name: full_db
